aws_eip.tf
# # EIP割り当て
# resource "aws_eip" "menta_vpc_eip" {
#   depends_on = [aws_internet_gateway.menta_igw]
#   vpc      = true
# }
